--- a/packages/ak-tabs/src/shared-variables.less
+++ b/packages/ak-tabs/src/shared-variables.less
@@ -2,4 +2,12 @@
 
 @import '../node_modules/akutil-shared-styles/src/colors.less';
 
-@ak-tabs-padding: 15px;
+@ak-tabs-margin: 5px;
+@ak-tabs-padding: 5px;
+@ak-tabs-color-label-default: #344563;
+@ak-tabs-color-line-default: #E5E8EC;
+@ak-tabs-color-selected: #165ECC;
+@ak-tabs-color-active: #0074E0;
+@ak-tabs-color-hover: @ak-tabs-color-selected;
+@ak-tabs-color-focus: #23A9FA;
+@ak-tabs-focus-width: 2px;
