--- a/packages/ak-navigation/src/index.less
+++ b/packages/ak-navigation/src/index.less
@@ -26,6 +26,20 @@
   .global {
     flex: 0 0 80px;
     background-color: @ak-navigation-global-color;
+    color: white;
+    flex-direction: column;
+    align-items: center;
+
+    .global-primary {
+      margin: 25px auto;
+      width: 20px;
+    }
+
+    .global-secondary {
+      margin: 10px auto;
+      height: 30px;
+      width: 20px;
+    }
   }
 
   .container {
