refactor(editorPopup): ak-editor-hyperlink-popup => ak-editor-popup

--- a/packages/ak-editor-popup/src/host.less
+++ b/packages/ak-editor-popup/src/host.less
@@ -1,7 +1,7 @@
 @import 'shared-variables.less';
 
-.ak-editor-hyperlink-popup, // for testing
-ak-editor-hyperlink-popup {
+.ak-editor-popup, // for testing
+ak-editor-popup {
   display:none;
   opacity: 0;
 
