--- a/packages/ak-editor-popup/src/shadow.less
+++ b/packages/ak-editor-popup/src/shadow.less
@@ -1,9 +1,9 @@
 @import 'shared-variables.less';
 
-.hyperlink-popup {
-  background: @ak-editor-hyperlink-popup-background;
-  border-radius: @ak-inline-dialog-border-radius;
-  box-shadow: @ak-inline-dialog-box-shadow;
+.popup {
+  background: @ak-editor-popup-background;
+  border-radius: @ak-editor-popup-border-radius;
+  box-shadow: @ak-editor-popup-box-shadow;
   position: relative;
   height: 20px;
   display: flex;
@@ -18,7 +18,7 @@
     border-style: solid;
     border-width: 0 @height @height @height;
     top: -@height;
-    border-color: transparent transparent @ak-editor-hyperlink-popup-background transparent;
+    border-color: transparent transparent @ak-editor-popup-background transparent;
     display: block;
     content: '';
     position: absolute;
