--- a/packages/ak-avatar/src/shadow.less
+++ b/packages/ak-avatar/src/shadow.less
@@ -5,12 +5,7 @@
 @ak-avatar-size-medium: 30px;
 @ak-avatar-size-small: 20px;
 
-@ak-avatar-background: #F0F2F5;
-
-// Used to calculate how large the presence icon should be
-@ak-avatar-presence-img-ratio: 0.25;
-// Angle that the presence bubble sits on the avatar. 3:00 is 0 degrees
-@ak-avatar-presence-angle: 40deg;
+@ak-avatar-background: transparent;
 
 @ak-avatar-presence-color-online: #48CC8C;
 @ak-avatar-presence-color-away: #FFC400;
@@ -31,7 +26,6 @@
   background-color: @ak-avatar-background;
   border-radius: 100%;
   border: 1px solid transparent;
-  text-align: center;
   vertical-align: bottom;
 
   &.small {
@@ -43,9 +37,6 @@
 
       .presenceMixin(@presence-size, @presence-offset);
     }
-
-    font-size: 12px;
-    font-weight: 600;
   }
   &.medium {
     .sizeMixin(@ak-avatar-size-medium);
@@ -56,9 +47,6 @@
 
       .presenceMixin(@presence-size, @presence-offset);
     }
-
-    font-size: 14px;
-    font-weight: 600;
   }
   &.large {
     .sizeMixin(@ak-avatar-size-large);
@@ -69,9 +57,6 @@
 
       .presenceMixin(@presence-size, @presence-offset);
     }
-
-    font-size: 24px;
-    font-weight: 500;
   }
   &.xlarge {
     .sizeMixin(@ak-avatar-size-xlarge);
@@ -84,9 +69,6 @@
 
       border-width: 4px;
     }
-
-    font-size: 46px;
-    font-weight: 500;
   }
 }
 
@@ -128,5 +110,4 @@
 .sizeMixin(@size) {
   height: @size;
   width: @size;
-  line-height: @size;
 }
