refactor(component): Removed helpers.js and shared-variables.less as they are no longer required
affects: ak-avatar

--- a/packages/ak-avatar/src/shadow.less
+++ b/packages/ak-avatar/src/shadow.less
@@ -1,4 +1,4 @@
-@import 'shared-variables.less';
+@import '../node_modules/akutil-shared-styles/src/colors.less';
 
 @ak-avatar-size-xlarge: 100px;
 @ak-avatar-size-large: 50px;
