style(package): Added ADG colors to share-styles.less
affects: akutil-shared-styles

--- a/packages/akutil-shared-styles/src/colors.less
+++ b/packages/akutil-shared-styles/src/colors.less
@@ -34,3 +34,39 @@
 @ak-editor-dropdown-active-background: #091E42;
 @ak-editor-popup-background: #253858;
 @ak-editor-popup-text: #BFEBFF;
+
+
+@ak-color-R50: #FECECD;
+@ak-color-R100: #FDAFAC;
+@ak-color-R200: #F48580;
+@ak-color-R300: #ED5451;
+@ak-color-R400: #D93A35;
+@ak-color-R500: #BF2117;
+
+@ak-color-Y50: #FFF2BF;
+@ak-color-Y100: #FFE580;
+@ak-color-Y200: #FFD740;
+@ak-color-Y300: #FFC400;
+@ak-color-Y400: #FFAB00;
+@ak-color-Y500: #FF991F;
+
+@ak-color-G50: #E2FFEE;
+@ak-color-G100: #78F0B7;
+@ak-color-G200: #64E6A4;
+@ak-color-G300: #48CC8C;
+@ak-color-G400: #2DB07C;
+@ak-color-G500: #008364;
+
+@ak-color-B50: #BFEBFF;
+@ak-color-B100: #23A9FA;
+@ak-color-B200: #0091EA;
+@ak-color-B300: #0074E0;
+@ak-color-B400: #165ECC;
+@ak-color-B500: #1251AE;
+
+@ak-color-P50: #DEDCF2;
+@ak-color-P100: #B6AFDB;
+@ak-color-P200: #8D86BF;
+@ak-color-P300: #6C64A6;
+@ak-color-P400: #4B4388;
+@ak-color-P500: #3E3678;
