--- a/packages/ak-tabs/src/shared-variables.less
+++ b/packages/ak-tabs/src/shared-variables.less
@@ -4,10 +4,11 @@
 
 @ak-tabs-margin: 5px;
 @ak-tabs-padding: 5px;
-@ak-tabs-color-label-default: #344563;
-@ak-tabs-color-line-default: #E5E8EC;
-@ak-tabs-color-selected: #165ECC;
-@ak-tabs-color-active: #0074E0;
-@ak-tabs-color-hover: @ak-tabs-color-selected;
-@ak-tabs-color-focus: #23A9FA;
+@ak-tabs-color-label-default: #344563;  // N600
+@ak-tabs-color-line-default: #E5E8EC; // What color is this?
+@ak-tabs-color-selected: #165ECC; // B400
+@ak-tabs-color-active: #0074E0; // B500
+@ak-tabs-color-hover: @ak-tabs-color-selected;  // B400
+@ak-tabs-color-focus: #23A9FA;  // B100 - Focus outline
 @ak-tabs-focus-width: 2px;
+@ak-tabs-line-height: 20px;
