fix(blockType): do not change the cursor when changing blockType

--- a/packages/ak-editor-toolbar-block-type/src/option.less
+++ b/packages/ak-editor-toolbar-block-type/src/option.less
@@ -7,6 +7,7 @@
   display: block;
   cursor: pointer;
   padding: 5px 70px 5px 10px;
+  user-select: none;
 
   &.active, &:hover {
     background: @ak-editor-dropdown-active-background;
