docs(component): Added USAGE and jsdoc comments for ak-badge
affects: ak-badge

--- a/packages/ak-badge/src/shadow.less
+++ b/packages/ak-badge/src/shadow.less
@@ -6,6 +6,10 @@
 @import '../node_modules/akutil-shared-styles/src/colors.less';
 @import 'shared-variables.less';
 
+.container {
+  display: inline-block;
+}
+
 .value {
   border-radius: 2em;
   display: inline-block;
