refactor: Skate 1.x. Replace [defined] with :defined.
affects: ak-editor-toolbar, ak-editor-toolbar-hyperlink, ak-inline-dialog, akutil-component-template, pf-mention

Still need to find a solution for polyfill.

References AK-49

--- a/packages/pf-mention/src/host.less
+++ b/packages/pf-mention/src/host.less
@@ -9,7 +9,7 @@ pf-scrollable,
 pf-mention-picker {
   display: block;
 
-  &:not([defined]) {
+  &:not(:defined) {
     display: none;
   }
 }
@@ -23,7 +23,7 @@ pf-scrollable {
 
   display: block;
 
-  &:not([defined]) {
+  &:not(:defined) {
     display: none;
   }
 }
