--- a/packages/pf-mention/src/wc/pf-mention-picker-shadow.less
+++ b/packages/pf-mention/src/wc/pf-mention-picker-shadow.less
@@ -2,7 +2,7 @@
 ak-inline-dialog {
   display: block;
 
-  &:not([defined]) {
+  &:not(:defined) {
     display: none;
   }
 }
@@ -10,7 +10,7 @@ ak-inline-dialog {
 pf-resourced-mention-list {
   display: block;
 
-  &:not([defined]) {
+  &:not(:defined) {
     display: none;
   }
 }
