--- a/packages/ak-button/src/host.less
+++ b/packages/ak-button/src/host.less
@@ -9,7 +9,10 @@
 // we define a class here in order to re-use it in the storybook
 // (because in storybook the component name is randomly generated)
 ak-button {
-  display: inline-block;
+
+  > _shadow_root_ {
+    display: flex;
+  }
 
   &:not([defined]) {
     display: none;
