--- a/packages/ak-button/src/shadow.less
+++ b/packages/ak-button/src/shadow.less
@@ -12,7 +12,7 @@
 .ak-button {
   //color: @ak-example-variable;
 
-  font-family: 'Neue Haas Unica Pro', Helvetica, Arial, sans-serif;
+  font-family: BlinkMacSystemFont, 'Neue Haas Unica Pro', Helvetica, Arial, sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: @base-font;
@@ -21,7 +21,7 @@
   background: @buttonDefault;
   color: #42526E;
   border: none;
-  padding: 0;
+  padding: 0 @base;
   line-height: @base*3;
   height: @base*3;
   border-radius: @base-radius;
@@ -31,11 +31,6 @@
   align-items: center;
   text-align: center;
   transition: background 0s ease-out, box-shadow 0.15s cubic-bezier(0.47, 0.03, 0.49, 1.38);
-
-  .label {
-    margin: 0 @base;
-    pointer-events: none;
-  }
 
   &:hover {
     background: @buttonHover;
