refactor: Move colours into akutil-shared-styles.
affects: ak-editor-footer, akutil-shared-styles

--- a/packages/ak-editor-footer/src/shadow.less
+++ b/packages/ak-editor-footer/src/shadow.less
@@ -1,7 +1,7 @@
 @import 'shared-variables.less';
 
 .root {
-  border: 1px solid #DEE1E6;
+  border: 1px solid @ak-editor-subtle-accent;
   font-size: 14px;
   padding: 20px;
 
@@ -14,8 +14,8 @@
 
 .saveButton {
   // TODO: move out to shared styles
-  background: #165ECC;
-  border: 1px solid #165ECC;
+  background: @ak-editor-primary-button;
+  border: 1px solid @ak-editor-primary-button;
   border-radius: 3px;
   color: white;
   cursor: pointer;
