--- a/packages/akutil-shared-styles/src/colors.less
+++ b/packages/akutil-shared-styles/src/colors.less
@@ -7,6 +7,7 @@
 @ak-editor-dropdown-active-background: #091E42;
 @ak-editor-popup-background: #253858;
 @ak-editor-popup-text: #BFEBFF;
+@ak-editor-primary-button: #165ECC;
 
 /* Reds */
 @ak-color-R50: #FECECD;
