fix: Disable ::slotted(*) styling until a fix to avoid rule merging is found.
affects: ak-editor-content, ak-editor-toolbar

--- a/packages/ak-editor-toolbar/src/shadow.less
+++ b/packages/ak-editor-toolbar/src/shadow.less
@@ -15,5 +15,6 @@
   .slottedEditorButton() { margin-left: 10px; }
   > slot > * { .slottedEditorButton(); }
   > ::content > * { .slottedEditorButton(); }
-  > ::slotted(*) { .slottedEditorButton(); }
+  // Re-instate when https://ecosystem.atlassian.net/browse/AK-146 is resolved.
+  //> ::slotted(*) { .slottedEditorButton(); }
 }
