--- a/packages/ak-editor-content/src/shadow.less
+++ b/packages/ak-editor-content/src/shadow.less
@@ -6,7 +6,8 @@
   .childContent() { margin: 20px; }
   > slot > * { .childContent(); }
   > ::content > * { .childContent(); }
-  > ::slotted(*) { .childContent(); }
+  // Re-instate when https://ecosystem.atlassian.net/browse/AK-146 is resolved.
+  //> ::slotted(*) { .childContent(); }
 }
 
 .openTop {
