refactor(blockType): change all variable paragraph names to "normal text"

--- a/packages/ak-editor-toolbar-block-type/src/index.less
+++ b/packages/ak-editor-toolbar-block-type/src/index.less
@@ -18,7 +18,7 @@
     display: block;
   }
 
-  [font=paragraph] {
+  [font=normal-text] {
     font-size: 14px;
     font-weight: normal;
     line-height: 20px;
