refactor(): skate 1.0.2 & prevented click event icon disabled

--- a/packages/ak-button/src/shadow.less
+++ b/packages/ak-button/src/shadow.less
@@ -79,7 +79,7 @@
     color: @n70;
 
     &:hover {
-      cursor: default;
+      cursor: not-allowed;
       background: @buttonDefault;
     }
   }
