feat(component): Add placeholder content for dropdown
affects: ak-tabs

--- a/packages/ak-tabs/src/shadow.less
+++ b/packages/ak-tabs/src/shadow.less
@@ -92,3 +92,19 @@
     left: @ak-tabs-margin;
   }
 }
+
+// Temp. For dropdown demo.
+.dd-container {
+  .dd-item a {
+    color: @ak-tabs-color-label-default;
+    text-decoration: none;
+  }
+
+  .dd-selected a {
+    color: @ak-tabs-color-selected;
+  }
+
+  .dd-hidden {
+    display: none;
+  }
+}
