refactor(bump): Bumped skate, updated host.less as [defined] no longer applied
affects: ak-avatar

--- a/packages/ak-avatar/src/host.less
+++ b/packages/ak-avatar/src/host.less
@@ -5,7 +5,7 @@ ak-avatar {
   display: inline-block;
   position: relative;
 
-  &:not([defined]) {
+  &:not(:defined) {
     display: none;
   }
 }
