--- a/packages/ak-radio-button/src/host.less
+++ b/packages/ak-radio-button/src/host.less
@@ -10,9 +10,7 @@
 // (because in storybook the component name is randomly generated)
 .ak-radio-button,
 ak-radio-button {
-  display: inline-block;
-
-  &:not([defined]) {
-    display: none;
-  }
+  // display: inline-block;
+  // flex: 1;
+  // background: yellow;
 }
