--- a/packages/ak-radio-button/src/shadow.less
+++ b/packages/ak-radio-button/src/shadow.less
@@ -5,6 +5,6 @@
 // browsers that do not support shadow DOM
 @import 'shared-variables.less';
 
-.my-class-name {
-  color: @ak-example-variable;
+.realRadio {
+    display: none;
 }
