--- a/packages/ak-avatar/stories/stories.less
+++ b/packages/ak-avatar/stories/stories.less
@@ -2,3 +2,10 @@
   margin-left: 5px;
   margin-top: 17px;
 }
+
+.example {
+  border: 1px dotted blue;
+  width: 500px;
+  padding: 10px;
+  margin: 10px;
+}
