feat(component): Truncate the label if only a single label is visible
affects: ak-tabs

--- a/packages/ak-tabs/src/shadow.less
+++ b/packages/ak-tabs/src/shadow.less
@@ -57,6 +57,12 @@
     visibility: hidden;
     position: absolute;
   }
+
+  &.ak-tab-label-single {
+    min-width: 30px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 // Tab labels line
@@ -98,10 +104,6 @@
   .dd-item a {
     color: @ak-tabs-color-label-default;
     text-decoration: none;
-  }
-
-  .dd-selected a {
-    color: @ak-tabs-color-selected;
   }
 
   .dd-hidden {
