--- a/packages/ak-button/src/shadow.less
+++ b/packages/ak-button/src/shadow.less
@@ -9,6 +9,11 @@
   display: inline-block;
 }
 
+.content-container {
+  display: flex;
+  align-items: center;
+}
+
 .ak-button {
 
   font-family: BlinkMacSystemFont, 'Neue Haas Unica Pro', Helvetica, Arial, sans-serif;
@@ -80,13 +85,6 @@
     &:hover {
       cursor: not-allowed;
       background: @buttonDefault;
-    }
-
-    ::slotted(*) {
-      opacity: 0.3;
-    }
-    slot * {
-      opacity: 0.3;
     }
   }
 
