--- a/packages/ak-button/src/shared-variables.less
+++ b/packages/ak-button/src/shared-variables.less
@@ -9,4 +9,4 @@
 @buttonDefault: fade(@ak-color-N900, 6%);
 @buttonHover: fade(@ak-color-N900, 10%);
 @buttonFocus: fade(@ak-color-B200, 80%);
-@buttonActive: fade(@ak-color-N900, 50%);
+@buttonActive: fade(@ak-color-B50, 50%);
