--- a/packages/ak-tabs/src/shared-variables.less
+++ b/packages/ak-tabs/src/shared-variables.less
@@ -2,8 +2,9 @@
 
 @import '../node_modules/akutil-shared-styles/src/colors.less';
 
-@ak-tabs-margin: 5px;
-@ak-tabs-padding: 5px;
+@ak-tabs-padding-vertical: 5px;
+@ak-tabs-padding-horizontal: 10px;
+@ak-tabs-margin: @ak-tabs-padding-horizontal / 2;
 @ak-tabs-color-label-default: #344563;  // N600
 @ak-tabs-color-line-default: #E5E8EC;
 @ak-tabs-color-selected: #165ECC; // B400
