refactor(component): respond to PR comments
affects: ak-navigation

--- a/packages/ak-navigation/src/ak-navigation-link.less
+++ b/packages/ak-navigation/src/ak-navigation-link.less
@@ -1,5 +1,7 @@
-@ak-navigation-link-color: #505F79;
-@ak-navigation-selected-link-color: #165ECC;
+@import 'shared-variables.less';
+
+@ak-navigation-link-color: @ak-color-N500;
+@ak-navigation-selected-link-color: @ak-color-B500;
 
 .link {
   color: @ak-navigation-link-color;
