--- a/packages/ak-navigation/src/index.less
+++ b/packages/ak-navigation/src/index.less
@@ -1,10 +1,9 @@
 @import 'shared-variables.less';
 @import 'ak-navigation-link.less';
 
-// Hard coded for now as we don't have the full palette yet
-@ak-navigation-global-color: #004CAF;
-@ak-navigation-container-color: #EFF2F5;
-@ak-navigation-container-name-color: #42526E;
+@ak-navigation-global-color: @ak-color-B200;
+@ak-navigation-container-color: @ak-color-N20;
+@ak-navigation-container-name-color: @ak-color-N500;
 
 .navigation {
   background-color: @ak-navigation-container-color;
