--- a/packages/ak-tabs/src/shadow.less
+++ b/packages/ak-tabs/src/shadow.less
@@ -84,12 +84,24 @@
 
 // Temporary. For dropdown placeholder.
 .dd-container {
-  .dd-item a {
-    color: @ak-tabs-color-label-default;
-    text-decoration: none;
-  }
+  list-style-type: none;
+  margin: 0;
+  position: absolute;
+  right: 0;
+  top: 40px;
 
-  .dd-hidden {
-    display: none;
+  .dd-item {
+    border: 1px solid black;
+    margin: 0;
+    padding: 5px;
+
+    a {
+      color: @ak-tabs-color-label-default;
+      text-decoration: none;
+    }
   }
+}
+
+.dd-hidden {
+  display: none;
 }
