--- a/packages/ak-dropdown/src/shadow-item.less
+++ b/packages/ak-dropdown/src/shadow-item.less
@@ -7,6 +7,7 @@
   box-sizing:border-box;
   cursor:pointer;
   background:@ak-color-N700;
+  display:block;
 
   &:hover {
     background:@ak-color-N800;
@@ -21,6 +22,7 @@
     box-shadow: 0 0 0 2px @ak-color-B200;
     outline: none;
     background:@ak-color-N800;
+    position:relative;
   }
 }
 
