feat(component): ak-dropdown-item finished
affects: ak-dropdown

--- a/packages/ak-dropdown/src/host.less
+++ b/packages/ak-dropdown/src/host.less
@@ -14,6 +14,7 @@ ak-dropdown {
   min-width: 150px;
   min-height:30px;
   max-width:300px;
+  font-family:@ak-dropdown-font-family;
 }
 
 .ak-dropdown-trigger,
